# cmakeTutorial

./: README.md  autoCreateDir.sh
step1/: .TutorialConfig.h.in.swp  CMakeLists.txt  tutorial.cxx
step10/: CMakeLists.txt
step10/MathFunctions/: CMakeLists.txt
step10_build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  Tutorial  cmake_install.cmake
step10_build/MathFunctions/: Makefile  cmake_install.cmake
step11/: CMakeLists.txt
step11/MathFunctions/: CMakeLists.txt  mysqrt.cxx
step11_build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  MathFunctionsTargets.cmake  Tutorial  cmake_install.cmake
step11_build/MathFunctions/: MakeTable  Makefile  cmake_install.cmake
step12/: CMakeLists.txt  CTestConfig.cmake  License.txt  MultiCPackConfig.cmake  Tutorial-1.0-Linux.sh
step12/MathFunctions/: CMakeLists.txt
step12/_CPack_Packages/Linux/STGZ/Tutorial-1.0-Linux/include/: MathFunctions.h
step12/_CPack_Packages/Linux/TGZ/Tutorial-1.0-Linux/lib/: libMathFunctionsd.so.1.0.0
step12/_CPack_Packages/Linux/TGZ/Tutorial-1.0-Linux/lib/cmake/MathFunctions/: MathFunctionsTargets.cmake
step12/_CPack_Packages/Linux/TZ/: Tutorial-1.0-Linux.tar.Z
step12/_CPack_Packages/Linux/TZ/Tutorial-1.0-Linux/lib/cmake/MathFunctions/: MathFunctionsTargets-release.cmake
step12/debug/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  MathFunctionsTargets.cmake  Tutoriald  cmake_install.cmake  install_manifest.txt
step12/debug/MathFunctions/: MakeTable  Makefile  cmake_install.cmake  libMathFunctionsd.so.1.0.0
step12/release/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  MathFunctionsTargets.cmake  Tutorial  cmake_install.cmake  install_manifest.txt
step12/release/MathFunctions/: MakeTable  Makefile  cmake_install.cmake
step1_build/: CMakeCache.txt  Makefile  Tutorial  cmake_install.cmake
step2/: CMakeLists.txt
step2/MathFunctions/: CMakeLists.txt
step2_build/: CMakeCache.txt  Makefile  Tutorial  cmake_install.cmake
step2_build/MathFunctions/: Makefile  cmake_install.cmake
step3/: CMakeLists.txt  tutorial.cxx
step3/MathFunctions/: CMakeLists.txt  MathFunctions.cxx
step3_build/: CMakeCache.txt  Makefile  cmake_install.cmake
step3_build/MathFunctions/: Makefile  cmake_install.cmake
step4/: CMakeLists.txt
step4_build/: CMakeCache.txt  Makefile  Tutorial  cmake_install.cmake
step4_build/MathFunctions/: Makefile  cmake_install.cmake
step5/: CMakeLists.txt
step5/MathFunctions/: CMakeLists.txt
step5_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
step5_build/MathFunctions/: Makefile  cmake_install.cmake
step5_build/Testing/Temporary/: CTestCostData.txt
step6/: CMakeLists.txt  CTestConfig.cmake
step6_build/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
step6_build/MathFunctions/: Makefile  cmake_install.cmake
step6_build/Testing/: TAG
step6_build/Testing/20230619-0535/: Build.xml  Configure.xml  Done.xml  Test.xml
step6_build/Testing/Temporary/: CTestCostData.txt
step7/MathFunctions/: CMakeLists.txt  mysqrt.cxx
step7_build/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  Tutorial  cmake_install.cmake
step7_build/MathFunctions/: Makefile  cmake_install.cmake
step8/MathFunctions/: CMakeLists.txt
step8_build/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  Tutorial  cmake_install.cmake
step8_build/MathFunctions/: Makefile  cmake_install.cmake
step9/: CMakeLists.txt
step9/MathFunctions/: MakeTable.cmake
step9_build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  install_manifest.txt
step9_build/MathFunctions/: Makefile  cmake_install.cmake
